# rl_json

./: .gitignore  .gitmodules  .gse  LICENSE  Makefile  Makefile.in  README.md  TECLABCHANGES.md  aclocal.m4  configure  configure.ac  configure.in  fetch_test_cases.tcl  get_tclconfig.tcl  meson.build  meson.options  pkgIndex.tcl  pkgIndex.tcl.in  rl_json.pc.in  rl_jsonConfig.sh.in  rl_jsonUuid.h.in  suppressions
.github/workflows/: release.yml
bench/: as_json.bench  bench-0.1.tm  json_old-1.0.tm  new.bench  normalize.bench  old.tcl  parse.bench  piecewise_template.bench  run.tcl  template.bench  unload.bench  valid_guard.bench
build_template/libtommath/: Makefile
claude/skills/rl_json/: SKILL.md
doc/: json.html  json.md.in  json.n  meson.build
generic/: api.c  bignum_ops.c  bignum_ops.h  cbor.c  dedup.c  dedup.h  json_types.c  jsonsh.c  main.c  main.h  meson.build  names.c  names.h  parser.c  parser.h  rl_json.c  rl_json.decls  rl_json.h  rl_jsonBuildInfo.c  rl_jsonDecls.h  rl_jsonInt.h  rl_jsonStubInit.c  rl_jsonStubLib.c  tclstuff.h  tip445.h
gid/: pkgIndex.tcl
perf/: .all.tcl.swp  all.tcl  json_old-1.0.tm
subprojects/: hedley.wrap  libtommath.wrap  tcl.wrap  yajl.wrap
subprojects/packagefiles/: libtommath  tcl
subprojects/packagefiles/yajl-tcl/: meson.build
support/: urlencode-1.0.tm
tclconfig/: ChangeLog  tcl.m4
tests/: _parser.test  _template.test  all.tcl  amap.test  array.test  autoarray.test  autoobject.test  boolean.test  cbor.test  common.tcl  decode.test  exists.test  extract.test  foreach.test  foreach_data  from_template.test  get.test  get_typed.test  helpers.tcl  jsontestsuite.test  keys.test  length.test  lmap.test  memory.test  merge.test  misc.test  new.test  newparser.test  normalize.test  number.test  object.test  omap.test  parse.test  pretty.test  quirk.test  set.test  string.test  template.test  template_string.test  type.test  (+2 more)
tools/: dist_fixup.sh
vs/: rl_json.vcxproj  rl_json.vcxproj.filters
win/: makefile.vc
win/vc14/: .gitignore  rl_json.sln  rl_json.vcxproj
